msa 페이징 추가